# np_clone

./: .clang-format  .gitignore  Makefile  README.md  TODO.txt  comp.sh  index.cpp  index.py  req.txt  setup.py  test.cpp
src/: CMakeLists.txt  Makefile  aux.cpp  aux.h  aux.pxd  defines.h  index.cpp  index.pyx  matrix.cpp  matrix.h  setup.cpp  setup.py  test.cpp
